--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,18 @@ version: "3"
 
 services:
 
+  reverseproxy:
+
+    image: nginx:latest
+    configs:
+      - source: proxy
+      target: /etc/nginx/nginx.conf
+      ports:
+        - 80:5000
+      networks:
+        - frontend
+      restart: always 
+
   redis:
 
     image: redis:alpine
