--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
-version: "3"
+version: "3.3"
 
 services:
 
-  reverseproxy:
+  proxy:
 
     image: nginx:latest
+    container_name: nginx
     configs:
       - source: proxy
       target: /etc/nginx/nginx.conf
