--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,14 @@ version: "3.3"
 
 services:
 
-  proxy:
-
+  nginx: 
     image: nginx:latest
-    container_name: nginx
-    configs:
-      - source: proxy
-      target: /etc/nginx/nginx.conf
-      ports:
-        - 80:5000
-      networks:
-        - frontend
-      restart: always 
+    container_name: reverproxy
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
+      - 443:443
 
   redis:
 
@@ -77,6 +73,7 @@ services:
 
 volumes:
   db-data:
+  - ./nginx.conf:/etc/nginx/nginx.conf
     
 networks:
   frontend:
