--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,13 +3,10 @@ version: "3.3"
 services:
 
   nginx: 
-    image: nginx:latest
-    container_name: reverproxy
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+    image: reverse:latest
+    container_name: reverseproxy
     ports:
-      - 80:80
-      - 443:443
+      - 80:5000
 
   redis:
 
@@ -73,7 +70,6 @@ services:
 
 volumes:
   db-data:
-  - ./nginx.conf:/etc/nginx/nginx.conf
     
 networks:
   frontend:
