--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ http {
         '"$http_referer" "$http_user_agent" "$gzip_ratio"';
 
     upstream api {
-        server api:5000;
+        server 192.168.99.100:5000;
     }
 
     server {
