--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
         access_log /var/log/nginx/access.log compression;
 
         location /hello/ {
-            proxy_pass         http://testapp/;
+            proxy_pass         http://192.168.99.100/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
