--- a/nginx.conf
+++ b/nginx.conf
@@ -2,27 +2,48 @@ worker_processes 1;
 
 events { worker_connections 1024; }
 
-
 http {
 
-    log_format compression '$remote_addr - $remote_user [$time_local] '
-        '"$request" $status $upstream_addr '
-        '"$http_referer" "$http_user_agent" "$gzip_ratio"';
+    sendfile on;
 
-    upstream api {
+    upstream docker-vote {
         server 192.168.99.100:5000;
+        server 192.168.99.101:5000;
+    }
+
+    upstream docker-result {
+        server 192.168.99.100:5001;
+        server 192.168.99.101:5001;
     }
 
     server {
         listen 80;
-        access_log /var/log/nginx/access.log compression;
+        #server_name example1.com;
 
-        location /hello/ {
-            proxy_pass         http://192.168.99.100/;
+        location / {
+            proxy_pass         http://docker-vote;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
+            add_header         X-Upstream $upstream_addr;
         }
     }
+
+    server {
+        listen 8080;
+        #server_name example2.com;
+
+        location / {
+            proxy_pass         http://docker-result;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            add_header         X-Upstream $upstream_addr;
+        }
+    }
+
+}
