--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,11 +24,13 @@ services:
       - "db-data:/var/lib/postgresql/data"
     networks:
       - backend
+    environment:
+      - "constraint:node==worker"
 
   vote:
 
     image: dockersamples/examplevotingapp_vote:before
-
+    hostname: vote_node
     ports:
 
       - 5000:80
@@ -46,7 +48,7 @@ services:
   result:
 
     image: dockersamples/examplevotingapp_result:before
-
+    hostname: result_node
     ports:
 
       - 5001:80
