--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
 
     server {
         listen 80;
-        #server_name example1.com;
+        server_name reverseproxy;
 
         location / {
             proxy_pass         http://docker-vote;
