--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
   nginx: 
     image: reverse:latest
     container_name: reverseproxy
+    hostname: reverseproxy
     ports:
       - 80:80
       - 8080:8080
