--- a/nginx.conf
+++ b/nginx.conf
@@ -18,11 +18,32 @@ http {
 
     server {
         listen 80;
-        server_name reverseproxy;
+        return 301 https://docker-result
+        
+    }
+
+    server {
+        listen 443 ssl;
+        server_name docker-result;
+
+        ssl_certificate /etc/ssl/certs/server.crt;
+        ssl_certificate_key /etc/ssl/private/server.key;
+
+        ssl on;
+
+        ssl_session_cache builtin:1000 shared:SSL:10m;
+
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+
+        ssl_prefer_server_ciphers on;
+
+        access_log /var/log/nginx/access.log;
 
         location / {
-            proxy_pass         http://docker-vote;
-            proxy_redirect     off;
+            proxy_pass         http://docker-result;
+            proxy_redirect     https://docker-result;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
