--- a/nginx.conf
+++ b/nginx.conf
@@ -3,58 +3,49 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-
-    sendfile on;
-
-    upstream docker-vote {
-        server 192.168.99.100:5000;
-        server 192.168.99.101:5000;
-    }
-
-    upstream docker-result {
-        server 192.168.99.100:5001;
-        server 192.168.99.101:5001;
-    }
+        upstream docker-vote {
+            server docker-vote:443;
+        }
+        upstream docker-result {
+            server docker-result:5001;
+        }
 
     server {
-        listen 80;
-        return 301 https://docker-result
+        listen      80;
+        server_name reverseproxy;
         
+        location / {
+            proxy_pass                    https://docker-vote;
+            proxy_ssl_certificate         /etc/nginx/server.crt;
+            proxy_ssl_certificate_key     /etc/nginx/server.key;
+            proxy_ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
+            proxy_ssl_ciphers             HIGH:!aNULL:!MD5;
+            proxy_ssl_trusted_certificate /etc/nginx/trusted_ca_cert.crt;
+
+            proxy_ssl_verify        on;
+            proxy_ssl_verify_depth  2;
+            proxy_ssl_session_reuse on;
+        }
     }
 
     server {
-        listen 443 ssl;
-        server_name docker-result;
+        listen      443 ssl;
+        server_name docker-vote;
 
-        ssl_certificate /etc/ssl/certs/server.crt;
-        ssl_certificate_key /etc/ssl/private/server.key;
-
-        ssl on;
-
-        ssl_session_cache builtin:1000 shared:SSL:10m;
-
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
-        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
-
-        ssl_prefer_server_ciphers on;
-
-        access_log /var/log/nginx/access.log;
+        ssl_certificate        /etc/ssl/certs/server.crt;
+        ssl_certificate_key    /etc/ssl/private/server.key;
+        ssl_client_certificate /etc/ssl/certs/ca.crt;
+        ssl_verify_client      optional;
 
         location / {
-            proxy_pass         http://docker-result;
-            proxy_redirect     https://docker-result;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-            add_header         X-Upstream $upstream_addr;
+            proxy_pass http://docker-vote:443;
+        #...
         }
     }
 
     server {
         listen 8080;
-        #server_name example2.com;
+        server_name docker-result;
 
         location / {
             proxy_pass         http://docker-result;
@@ -66,5 +57,4 @@ http {
             add_header         X-Upstream $upstream_addr;
         }
     }
-
 }
