--- a/nginx.conf
+++ b/nginx.conf
@@ -3,34 +3,28 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-        upstream docker-vote {
-            server docker-vote:443;
-        }
-        upstream docker-result {
-            server docker-result:5001;
-        }
 
-    server {
-        listen      80;
-        server_name reverseproxy;
-        
-        location / {
-            proxy_pass                    https://docker-vote;
-            proxy_ssl_certificate         /etc/nginx/server.crt;
-            proxy_ssl_certificate_key     /etc/nginx/server.key;
-            proxy_ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
-            proxy_ssl_ciphers             HIGH:!aNULL:!MD5;
-            proxy_ssl_trusted_certificate /etc/nginx/trusted_ca_cert.crt;
+    sendfile on;
 
-            proxy_ssl_verify        on;
-            proxy_ssl_verify_depth  2;
-            proxy_ssl_session_reuse on;
-        }
+    upstream docker-vote {
+        server 192.168.99.100:5000;
+        server 192.168.99.101:5000;
+    }
+
+    upstream docker-result {
+        server 192.168.99.100:5001;
+        server 192.168.99.101:5001;
     }
 
     server {
-        listen      443 ssl;
-        server_name docker-vote;
+        listen 80 default;
+        server_name reverseproxy;
+        return      301 https://reverseproxy;
+    }
+    
+    server {
+        listen 443 ssl;
+        server_name reverseproxy;
 
         ssl_certificate        /etc/ssl/certs/server.crt;
         ssl_certificate_key    /etc/ssl/private/server.key;
@@ -38,14 +32,19 @@ http {
         ssl_verify_client      optional;
 
         location / {
-            proxy_pass http://docker-vote:443;
-        #...
+            proxy_pass         http://docker-vote;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            add_header         X-Upstream $upstream_addr;
         }
     }
 
     server {
         listen 8080;
-        server_name docker-result;
+        #server_name example2.com;
 
         location / {
             proxy_pass         http://docker-result;
@@ -57,4 +56,5 @@ http {
             add_header         X-Upstream $upstream_addr;
         }
     }
-}
+
+}   
