--- a/nginx.conf
+++ b/nginx.conf
@@ -5,17 +5,16 @@ events {
    worker_connections 768;
 }
 http {
-  upstream api {
-    server api;
+  upstream docker-vote {
+    server docker-vote;
   }
   server {
     listen *:8000;
-    location = /api {
+    location = / {
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      rewrite /api/(.*) /$1 break;
       proxy_pass http://docker-vote;
     }
   }
