some experiments extra

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,11 @@ events {
 }
 http {
   upstream docker-vote {
-    server docker-vote;
+    server 192.168.99.112:5000;
+    server 192.168.99.111:5000;
+    
+    server 192.168.99.112:5001;
+    server 192.168.99.111:5001;
   }
   server {
     listen *:8000;
@@ -15,7 +19,7 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_pass http://docker-vote;
+      proxy_pass http://192.168.99.112:5000;
     }
   }
 }
