--- a/nginx.conf
+++ b/nginx.conf
@@ -6,11 +6,9 @@ events {
 }
 http {
   upstream docker-vote {
-    server 192.168.99.112:5000;
-    server 192.168.99.111:5000;
-
-    server 192.168.99.112:5001;
-    server 192.168.99.111:5001;
+    server vote:5000;
+    server result:5001;
+    
   }
   server {
     listen *:8000;
@@ -19,7 +17,14 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_pass http://192.168.99.112:5000;
+      proxy_pass http://vote:5000;
+    }
+    location = /result {
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_pass http://resuult:5001;
     }
   }
 }
