--- a/nginx.conf
+++ b/nginx.conf
@@ -7,18 +7,18 @@ http {
     sendfile on;
 
     upstream vote {
-        server teste_vote:5000;
+        server 192.168.112:5000;
     }
 
     upstream result {
-        server teste_result:5001;
+        server 192.168.111:5001;
     }
 
     server {
         listen 80;
-        server_name: 192.168.100.112;
+
         location / {
-            proxy_pass         http://teste_vote:5000;
+            proxy_pass         http://192.168.112:5000;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
