--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,7 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
         }
 
-        location / {
+        location /result {
             proxy_pass         http://192.168.99.111:5001;
             proxy_redirect     off;
             proxy_set_header   Host $host;
