--- a/nginx.conf
+++ b/nginx.conf
@@ -15,12 +15,28 @@ http {
     }
 
     server {
-        listen 80;
+    listen 80;
+    return 301 https://$host$request_uri;
+    }
 
-        location /result {
+    server {
+        listen 443;
+        server_name 192.168.99.112
+
+        ssl_certificate           /etc/nginx/cert.crt;
+        ssl_certificate_key       /etc/nginx/cert.key;
+
+        ssl on;
+        ssl_session_cache  builtin:1000  shared:SSL:10m;
+        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+        ssl_prefer_server_ciphers on;
+
+
+        location ^~ /result/ {
             proxy_pass         http://192.168.99.112:5001;
         }
-        
+
         location / {
             proxy_pass         http://192.168.99.112:5000;
             proxy_redirect     off;
@@ -28,9 +44,7 @@ http {
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
-        }
-
-        
+        }        
     }
 
 }
