--- a/nginx.conf
+++ b/nginx.conf
@@ -15,16 +15,17 @@ http {
     }
 
     server {
-    listen 80;
-    return 301 https://$host$request_uri;
+        listen 80;
+        return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name 192.168.99.112
+        ssl on
 
-        ssl_certificate           /etc/nginx/cert.crt;
-        ssl_certificate_key       /etc/nginx/cert.key;
+        ssl_certificate           /etc/nginx/server.crt;
+        ssl_certificate_key       /etc/nginx/server.key;
 
         ssl on;
         ssl_session_cache  builtin:1000  shared:SSL:10m;
