--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     server {
         listen 80;
-        return 301 https://$host$request_uri;
+        return 301 https://192.168.99.112$request_uri;
     }
 
     server {
