--- a/nginx.conf
+++ b/nginx.conf
@@ -15,14 +15,16 @@ http {
     }
 
     server {
-        listen 80;
-        return 301 https://192.168.99.112$request_uri;
+      listen 80 default_server;
+
+      server_name _;
+
+      return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443 ssl;
+        listen 443;
         server_name 192.168.99.112
-        ssl on
 
         ssl_certificate           /etc/nginx/server.crt;
         ssl_certificate_key       /etc/nginx/server.key;
