some experiments extra

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,22 +23,16 @@ http {
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name 192.168.99.112
 
         ssl_certificate           /etc/nginx/server.crt;
         ssl_certificate_key       /etc/nginx/server.key;
 
-        ssl on;
         ssl_session_cache  builtin:1000  shared:SSL:10m;
         ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
         ssl_prefer_server_ciphers on;
-
-
-        location ^~ /result/ {
-            proxy_pass         http://192.168.99.112:5001;
-        }
 
         location / {
             proxy_pass         http://192.168.99.112:5000;
