--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,7 @@ http {
 
     server {
         listen 443 ssl;
+        server_name 192.168.99.112
 
         ssl_certificate           /etc/nginx/server.crt;
         ssl_certificate_key       /etc/nginx/server.key;
@@ -32,6 +33,8 @@ http {
         ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
         ssl_prefer_server_ciphers on;
+
+        rewrite ^(.*)$ https://192.168.99.112$request_uri permanent;
 
         location / {
             proxy_pass         http://192.168.99.112:5000;
