--- a/nginx.conf
+++ b/nginx.conf
@@ -34,10 +34,9 @@ http {
         ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
         ssl_prefer_server_ciphers on;
 
-        rewrite ^(.*)$ https://192.168.99.112$request_uri permanent;
-
         location / {
-            proxy_pass         http://192.168.99.112:5000;
+            proxy_pass         http://192.168.99.111:5000;
+            proxy_redirect http:// https://;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
