--- a/nginx.conf
+++ b/nginx.conf
@@ -23,12 +23,13 @@ http {
     }
 
     server {
-        listen 443 ssl;
+        listen 443;
         server_name 192.168.99.112
 
         ssl_certificate           /etc/nginx/server.crt;
         ssl_certificate_key       /etc/nginx/server.key;
 
+        ssl on
         ssl_session_cache  builtin:1000  shared:SSL:10m;
         ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
@@ -36,7 +37,7 @@ http {
 
         location / {
             proxy_pass         http://192.168.99.111:5000;
-            proxy_redirect http:// https://;
+            proxy_redirect     http:// https://;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
