some experiments extra

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
 
       server_name _;
 
-      return 301 https://$host$request_uri;
+      return 301 https://192.168.99.112/;
     }
 
     server {
@@ -36,7 +36,7 @@ http {
         ssl_prefer_server_ciphers on;
 
         location / {
-            proxy_pass         http://192.168.99.111:5000;
+            proxy_pass         http://192.168.99.112:5000;
             proxy_redirect     http:// https://;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
