--- a/nginx.conf
+++ b/nginx.conf
@@ -24,24 +24,14 @@ http {
 
     server {
         listen 443;
+        ssl on;
         server_name 192.168.99.112
 
-        ssl_certificate           /etc/nginx/server.crt;
-        ssl_certificate_key       /etc/nginx/server.key;
-
-        ssl on
-        ssl_session_cache  builtin:1000  shared:SSL:10m;
-        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
-        ssl_prefer_server_ciphers on;
+        ssl_certificate           /etc/nginx/cert.pem;
+        ssl_certificate_key       /etc/nginx/key.pem;
 
         location / {
             proxy_pass         http://192.168.99.112:5000;
-            proxy_redirect     http:// https://;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
         }        
     }
 
