some experiments extra

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,19 +19,17 @@ http {
 
       server_name _;
 
-      return 301 https://192.168.99.112/;
+      return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443;
-        ssl on;
-        server_name 192.168.99.112
-
-        ssl_certificate           /etc/nginx/cert.pem;
-        ssl_certificate_key       /etc/nginx/key.pem;
+         listen 443;
+         ssl on;
+         ssl_certificate /etc/nginx/conf.d/cert.pem;
+         ssl_certificate_key /etc/nginx/conf.d/key.pem;
 
         location / {
-            proxy_pass         http://192.168.99.112:5000;
+            proxy_pass         http://192.168.99.111:5000;
         }        
     }
 
