--- a/nginx.conf
+++ b/nginx.conf
@@ -17,19 +17,30 @@ http {
     server {
       listen 80 default_server;
 
-      server_name _;
+      server_name 192.168.99.112;
 
-      return 301 https://$host$request_uri;
+      return 301 https://192.168.99.112;
     }
 
     server {
-         listen 443;
-         ssl on;
-         ssl_certificate /etc/nginx/conf.d/cert.pem;
-         ssl_certificate_key /etc/nginx/conf.d/key.pem;
+        listen 443 ssl;
+        server_name 192.168.99.112
+
+        ssl_certificate           /etc/nginx/cert.pem;
+        ssl_certificate_key       /etc/nginx/key.pem;
+
+        ssl_session_cache  builtin:1000  shared:SSL:10m;
+        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+        ssl_prefer_server_ciphers on;
 
         location / {
-            proxy_pass         http://192.168.99.111:5000;  
+            proxy_pass         http://192.168.99.111:5000;
+            proxy_redirect     http:// https://;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
         }        
     }
 
