--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
     }
 
     server {
-      listen 80 default_server;
+      listen 80;
 
       server_name 192.168.99.112;
 
@@ -36,7 +36,6 @@ http {
 
         location / {
             proxy_pass         http://192.168.99.111:5000;
-            proxy_redirect     http:// https://;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
