--- a/nginx.conf
+++ b/nginx.conf
@@ -15,26 +15,26 @@ http {
     }
 
     server {
-      listen 80;
+          listen   80;
+          server_name  192.168.99.112;
 
-      server_name 192.168.99.112;
-
-      return 301 https://192.168.99.112;
+          location / {
+            rewrite ^(.*) https://192.168.99.112$1 permanent;
     }
+}
 
     server {
         listen 443 ssl;
-        server_name 192.168.99.112
 
         ssl_certificate           /etc/nginx/cert.pem;
         ssl_certificate_key       /etc/nginx/key.pem;
 
         location / {
             proxy_pass         http://192.168.99.111:5000;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_redirect off;
+            proxy_set_header Host $host:$server_port;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Ssl on;
         }        
     }
 
