some experiments extra

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,10 @@ http {
         ssl_certificate           /etc/nginx/cert.pem;
         ssl_certificate_key       /etc/nginx/key.pem;
 
+        location ^~ /result {
+            proxy_pass http://192.168.99.111:5001;
+        }
+
         location / {
             proxy_pass         http://192.168.99.111:5000;
             proxy_redirect off;
