--- a/nginx.conf
+++ b/nginx.conf
@@ -29,15 +29,15 @@ http {
         ssl_certificate           /etc/nginx/cert.pem;
         ssl_certificate_key       /etc/nginx/key.pem;
 
-        location ^~ /result {
-            proxy_pass http://192.168.99.111:5001;proxy_redirect off;
+        location / {
+            proxy_pass         http://192.168.99.111:5000;
+            proxy_redirect off;
             proxy_set_header Host $host:$server_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Ssl on;
         }
-
-        location / {
-            proxy_pass         http://192.168.99.111:5000;
+        location /result {
+            proxy_pass http://192.168.99.111:5001;
             proxy_redirect off;
             proxy_set_header Host $host:$server_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
