--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
         }
         location /result {
             proxy_pass http://192.168.99.111:5001;
-            proxy_redirect off;
+            proxy_redirect http://192.168.99.111:5001 http://192.168.99.112:5001;
             proxy_set_header Host $host:$server_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Ssl on;
