--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,7 @@ http {
 
     server {
         listen 443 ssl;
+        server_name 192.168.99.111
 
         ssl_certificate           /etc/nginx/cert.pem;
         ssl_certificate_key       /etc/nginx/key.pem;
@@ -36,13 +37,23 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Ssl on;
         }
+              
+    }
+
+    server {
+        listen 443 ssl;
+        server_name 192.168.99.112
+
+        ssl_certificate           /etc/nginx/cert.pem;
+        ssl_certificate_key       /etc/nginx/key.pem;
+
         location /result {
             proxy_pass http://192.168.99.111:5001;
-            proxy_redirect http://192.168.99.111:5001 http://192.168.99.112:5001;
+            proxy_redirect off;
             proxy_set_header Host $host:$server_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Ssl on;
-        }        
+        }  
     }
 
 }
